Add JVM hint table